Link to bsolid.org from email

--- a/app/templates/email/digest.html
+++ b/app/templates/email/digest.html
@@ -11,7 +11,7 @@
 
 <p>
 	Here's your {{ period.0.strftime('%b %d') }} - {{ period.1.strftime('%b %d')
-	}} summary  of Solid causes that you are helping win:
+	}} summary  of <a href="https://bsolid.org">Solid</a> causes that you are helping win:
 </p>
 
 <p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
