--- a/app/templates/email/base.html
+++ b/app/templates/email/base.html
@@ -177,7 +177,7 @@
 
         <!-- Visually Hidden Preheader Text : BEGIN -->
         <div style="display: none; font-size: 1px; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; mso-hide: all; font-family: sans-serif;">
-            (Optional) This text will appear in the inbox preview, but not the email body. It can be used to supplement the email subject line or even summarize the email's contents. Extended text preheaders (~490 characters) seems like a better UX for anyone using a screenreader or voice-command apps like Siri to dictate the contents of an email. If this text is not included, email clients will automatically populate it using the text (including image alt text) at the start of the email's body.
+	    {% block preheader %}{% endblock %}
         </div>
         <!-- Visually Hidden Preheader Text : END -->
 
@@ -197,7 +197,12 @@
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 600px;">
                 <tr>
                     <td style="padding: 20px 0; text-align: center">
-                        <img src="https://bsolid.org/static/images/solid_logo.png" width="237" height="100" alt="alt_text" border="0" style="height: auto; font-family: sans-serif; font-size: 15px; line-height: 140%; color: #555555;">
+			<a href="https://bsolid.org"><img
+			    src="https://bsolid.org/static/images/solid_logo.png"
+			    width="237" height="100" alt="bsolid logo" border="0"
+			    style="height: auto; font-family: sans-serif;
+			    font-size: 15px; line-height: 140%; color:
+			    #555555;"></a>
                     </td>
                 </tr>
             </table>
