--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -23,9 +23,10 @@
                 <h5 class="u-remove-margin-bottom">{{ user.full_name }}</h5>
             {% endif %}
             {% if current_user == user or current_user.is_admin %}
-                <div class="u-add-margin-top">
-                    <small>Other users won't see the details below</small>
-                </div>
+                <br>
+                <small class="separator u-add-margin-top">
+                    <span>Other users won't see the details below</span>
+                </small>
                 {% if user.email %}<div>{{ user.email }}</div>{% endif %}
                 {% if user.phone %}<div>{{ user.phone }}</div>{% endif %}
                 {% if user.zip %}<div>{{ user.zip }}</div>{% endif %}
