Custom HTML titles for style guide pages

--- a/app/templates/styleguide/forms.html
+++ b/app/templates/styleguide/forms.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% set active_page = "styleguide_forms" %}
 
+{% block title %}Forms - Style Guide - {{ super() }}{% endblock title %}
+
 {% block scripts %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/scroll-spy.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='jQuery-Form-Validator/form-validator/jquery.form-validator.min.js') }}"></script>
