--- a/app/templates/styleguide/alerts.html
+++ b/app/templates/styleguide/alerts.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% set active_page = "styleguide_alerts" %}
 
+{% block title %}Alerts - Style Guide - {{ super() }}{% endblock title %}
+
 {% block scripts %}
 {% endblock %}
 
