--- a/app/templates/styleguide/media_queries.html
+++ b/app/templates/styleguide/media_queries.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% set active_page = "styleguide_media_queries" %}
 
+{% block title %}Media Queries - Style Guide - {{ super() }}{% endblock title %}
+
 {% block scripts %}
 {% endblock %}
 
