--- a/app/templates/styleguide/modals.html
+++ b/app/templates/styleguide/modals.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% set active_page = "styleguide_modals" %}
 
+{% block title %}Modals - Style Guide - {{ super() }}{% endblock title %}
+
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
 {% endblock %}
