--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -7,17 +7,17 @@
 {% set causes_display_cap = 10 %}
 {% set pages_display_cap = 10 %}
 <div class="full-width-container">
-	<div class="row u-add-margin-top">
-		<div class="twelve columns">
-			<h1>{{ _('Admin') }}</h1>
+    <div class="row u-add-margin-top">
+        <div class="twelve columns">
+            <h1>{{ _('Admin') }}</h1>
         </div>
     </div>
     <hr>
     <div class="row">
         <div class="one-third column">
             <h3 class="u-pull-left">{{ _('Users') }} <sup><small>{{ users | length }}</small></sup></h3>
-            <a href="{{ url_for('.admin_user_list') }}" 
-               title="View all users" 
+            <a href="{{ url_for('.admin_user_list') }}"
+               title="View all users"
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
                 <span class="u-hide-on-medium"> all</span>
@@ -27,7 +27,6 @@
                     <tr>
                         <th class="u-show-on-large">id</th>
                         <th>nickname</th>
-                        <th class="u-show-on-large">e-mail</th>
                         <th class="u-text-right">edit</th>
                     </tr>
                 </thead>
@@ -40,7 +39,6 @@
                                 {{ user.nickname }}
                             </a>
                         </td>
-                        <td class="u-show-on-large">{{ user.email|default('n/a') }}</td>
                         <td class="u-text-right">
                           <a href="{{ url_for('users.edit', nickname=user.nickname) }}">
                               <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
@@ -53,15 +51,15 @@
                 <tfoot>
                     <tr class="u-remove-border-bottom">
                         <td>
-                            <span class="oi" 
-                                  data-glyph="ellipses" 
+                            <span class="oi"
+                                  data-glyph="ellipses"
                                   style="display:block; margin-bottom:-8px;"
-                                  title="More" 
+                                  title="More"
                                   aria-hidden="true"></span>
                         </td>
                         <td colspan="3" class="u-text-right">
                             <small>
-                                {{ users | length -users_display_cap }} additional entries not displayed. 
+                                {{ users | length -users_display_cap }} additional entries not displayed.
                                 <a href="{{ url_for('.admin_user_list') }}">View all</a>.
                             </small>
                         </td>
@@ -72,23 +70,23 @@
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
                             <small>
-                                Nothing here yet. 
+                                Nothing here yet.
                             </small>
                         </td>
-                    </tr> 
+                    </tr>
                 </tfoot>
                 {% endif %}
             </table>
-		</div>
+        </div>
         <div class="one-third column">
             <h3 class="u-pull-left">{{ _('Causes') }} <sup><small>{{ causes | length }}</small></sup></h3>
-            <a href="{{ url_for('.admin_cause_list') }}" 
+            <a href="{{ url_for('.admin_cause_list') }}"
                title="View all causes"
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
                 <span class="u-hide-on-medium"> all</span>
             </a>
-            <a href="{{ url_for('causes.cause_add_edit') }}" 
+            <a href="{{ url_for('causes.cause_add_edit') }}"
                title="Add new cause"
                class="button u-pull-right">
                 <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
@@ -98,8 +96,7 @@
                 <thead>
                     <tr>
                         <th class="u-show-on-large">id</th>
-                        <th>title</th>
-                        <th class="u-show-on-large">slug</th>
+                        <th>title (slug)</th>
                         <th class="u-text-right">edit</th>
                     </tr>
                 </thead>
@@ -107,8 +104,10 @@
                     {% for cause in causes[:causes_display_cap] %}
                     <tr>
                         <td class="u-show-on-large">{{ cause.id }}</td>
-                        <td><a href="{{ url_for('causes.cause_detail', slug=cause.slug) }}">{{ cause.title }}</a></td>
-                        <td class="u-show-on-large">{{ cause.slug }}</td>
+			<td>
+			    <a href="{{ url_for('causes.cause_detail', slug=cause.slug) }}">{{ cause.title }}</a>
+			    ({{ cause.slug }})
+			</td>
                         <td class="u-text-right">
                           <a href="{{ url_for('causes.cause_add_edit', slug=cause.slug) }}">
                               <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
@@ -121,15 +120,15 @@
                 <tfoot>
                     <tr class="u-remove-border-bottom">
                         <td>
-                            <span class="oi" 
-                                  data-glyph="ellipses" 
+                            <span class="oi"
+                                  data-glyph="ellipses"
                                   style="display:block; margin-bottom:-8px;"
-                                  title="More" 
+                                  title="More"
                                   aria-hidden="true"></span>
                         </td>
                         <td colspan="3" class="u-text-right">
                             <small>
-                                {{ users | length -causes_display_cap }} additional entries not displayed. 
+                                {{ users | length -causes_display_cap }} additional entries not displayed.
                                 <a href="{{ url_for('.admin_cause_list') }}">View all</a>.
                             </small>
                         </td>
@@ -140,24 +139,24 @@
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
                             <small>
-                                Nothing here yet. 
+                                Nothing here yet.
                                 <a href="{{ url_for('causes.cause_add_edit') }}"> Add a new cause</a>.
                             </small>
                         </td>
-                    </tr> 
+                    </tr>
                 </tfoot>
                 {% endif %}
             </table>
         </div>
         <div class="one-third column">
             <h3 class="u-pull-left">{{ _('Pages') }} <sup><small>{{ pages | length }}</small></sup></h3>
-            <a href="{{ url_for('.admin_page_list') }}" 
+            <a href="{{ url_for('.admin_page_list') }}"
                title="View all pages"
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
                 <span class="u-hide-on-medium"> all</span>
             </a>
-            <a href="{{ url_for('.admin_page_add') }}" 
+            <a href="{{ url_for('.admin_page_add') }}"
                title="Add new page"
                class="button u-pull-right">
                 <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
@@ -167,8 +166,7 @@
                 <thead>
                     <tr>
                         <th class="u-show-on-large">id</th>
-                        <th>name</th>
-                        <th class="u-show-on-large">url</th>
+                        <th>name (url)</th>
                         <th class="u-text-right">edit</th>
                     </tr>
                 </thead>
@@ -176,8 +174,12 @@
                     {% for page in pages[:pages_display_cap] %}
                     <tr>
                         <td class="u-show-on-large">{{ page.id }}</td>
-                        <td>{{ page.name }}</td>
-                        <td class="u-show-on-large">{{ page.url }}</td>
+			<td>
+			    <a href="{{ url_for('pages.page_detail', url=page.url) }}">
+				{{ page.name }}
+			    </a>
+			    {{ page.url }}
+		        </td>
                         <td class="u-text-right">
                             <a href="{{ url_for('.admin_page_edit', pk=page.id) }}">
                                 <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
@@ -190,15 +192,15 @@
                 <tfoot>
                     <tr class="u-remove-border-bottom">
                         <td>
-                            <span class="oi" 
-                                  data-glyph="ellipses" 
+                            <span class="oi"
+                                  data-glyph="ellipses"
                                   style="display:block; margin-bottom:-8px;"
-                                  title="More" 
+                                  title="More"
                                   aria-hidden="true"></span>
                         </td>
                         <td colspan="3" class="u-text-right">
                             <small>
-                                {{ users | length -pages_display_cap }} additional entries not displayed. 
+                                {{ users | length -pages_display_cap }} additional entries not displayed.
                                 <a href="{{ url_for('.admin_page_list') }}"> View all</a>.
                             </small>
                         </td>
@@ -209,15 +211,15 @@
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
                             <small>
-                                Nothing here yet. 
+                                Nothing here yet.
                                 <a href="{{ url_for('.admin_page_add') }}"> Add a new page</a>.
                             </small>
                         </td>
-                    </tr> 
+                    </tr>
                 </tfoot>
                 {% endif %}
             </table>
         </div>
-	</div>
+    </div>
 </div>
 {% endblock %}
