--- a/app/templates/admin/page_list.html
+++ b/app/templates/admin/page_list.html
@@ -9,12 +9,12 @@
             <h1>Pages <sup><small>{{ gapes | length }}</small></sup></h1>
         </div>
         <div class="four columns">
-            <a href="{{ url_for('admin.admin') }}" 
+            <a href="{{ url_for('admin.admin') }}"
                class="button button-primary u-add-margin-top u-add-margin-left u-pull-right">
                 <span class="oi" data-glyph="caret-left" title="Back" aria-hidden="true"></span>
                 <span class="u-hide-on-mobile"> to Admin</span>
             </a>
-            <a href="{{ url_for('.admin_page_add') }}" 
+            <a href="{{ url_for('.admin_page_add') }}"
                title="Add new page"
                class="button u-pull-right u-add-margin-top">
                 <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
@@ -38,7 +38,11 @@
                     {% for page in pages %}
                     <tr>
                         <td>{{ page.id }}</td>
-                        <td>{{ page.name }}</td>
+                        <td>
+                            <a href="{{ url_for('pages.page_detail', url=page.url) }}">
+                                {{ page.name }}
+                            </a>
+                        </td>
                         <td>{{ page.url }}</td>
                         <td class="u-text-right">
                             <a href="{{ url_for('.admin_page_edit', pk=page.id) }}">
@@ -53,11 +57,11 @@
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
                             <small>
-                                Nothing here yet. 
+                                Nothing here yet.
                                 <a href="{{ url_for('.admin_page_add') }}"> Add a new page</a>.
                             </small>
                         </td>
-                    </tr> 
+                    </tr>
                 </tfoot>
                 {% endif %}
         </table>
