--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Contact - {{ super() }}{% endblock title %}
+
 {% block content %}
 <div class="container u-add-margin-top">
     <div class="row">
