--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,7 +98,9 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="{{ url_for('users.edit', nickname=current_user.nickname) }}">Settings</a>
+                                            <a href="{{ url_for('users.edit', nickname=current_user.nickname) }}">
+                                                {{ _('Settings') }}
+                                            </a>
                                         </li>
                                         {% if current_user.is_admin %}
                                         <!-- Admin tools -->
