--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Admin - {{ super() }}{% endblock title %}
+{% block title %}{{ _('Admin') }} - {{ super() }}{% endblock title %}
 
 {% block content %}
 {% set users_display_cap = 10 %}
@@ -16,13 +16,13 @@
     <div class="row">
         <div class="one-third column">
 	    <h3 class="u-pull-left">
-		<a href="{{ url_for('.admin_cause_list') }}">
+		<a href="{{ url_for('.admin_user_list') }}">
 		    {{ _('Users') }}
 		</a>
 		<sup><small>{{ users | length }}</small></sup>
 	    </h3>
             <a href="{{ url_for('.admin_user_list') }}"
-               title="View all users"
+               title="{{ _('View all users') }}"
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
                 <span class="u-hide-on-medium"> all</span>
@@ -30,9 +30,9 @@
             <table class="u-full-width">
                 <thead>
                     <tr>
-                        <th class="u-show-on-large">id</th>
-                        <th>nickname</th>
-                        <th class="u-text-right">edit</th>
+                        <th class="u-show-on-large">{{ _('id') }}</th>
+                        <th>{{ _('nickname') }}</th>
+                        <th class="u-text-right">{{ _('edit') }}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -46,7 +46,8 @@
                         </td>
                         <td class="u-text-right">
                           <a href="{{ url_for('users.edit', nickname=user.nickname) }}">
-                              <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
+			      <span class="oi" data-glyph="pencil" 
+				  title="{{ _('Edit') }}" aria-hidden="true"></span>
                           </a>
                         </td>
                     </tr>
@@ -59,13 +60,17 @@
                             <span class="oi"
                                   data-glyph="ellipses"
                                   style="display:block; margin-bottom:-8px;"
-                                  title="More"
+                                  title="{{ _('More') }}"
                                   aria-hidden="true"></span>
                         </td>
                         <td colspan="3" class="u-text-right">
                             <small>
-                                {{ users | length -users_display_cap }} additional entries not displayed.
-                                <a href="{{ url_for('.admin_user_list') }}">View all</a>.
+				{% trans trimmed user_count = users | length - users_display_cap  %}
+				{{ user_count }} additional entry not displayed.
+				{% pluralize %}
+				{{ user_count }} additional entries not displayed.
+				{% endtrans %}
+                                <a href="{{ url_for('.admin_user_list') }}">{{ _('View all') }}</a>.
                             </small>
                         </td>
                     </tr>
@@ -74,9 +79,7 @@
                 <tfoot>
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
-                            <small>
-                                Nothing here yet.
-                            </small>
+                            <small>{{ _('Nothing here yet.') }}</small>
                         </td>
                     </tr>
                 </tfoot>
@@ -91,23 +94,23 @@
 		<sup><small>{{ causes | length }}</small></sup>
 	    </h3>
             <a href="{{ url_for('.admin_cause_list') }}"
-               title="View all causes"
+               title="{{ _('View all causes') }}"
                class="button u-pull-right u-add-margin-left">
-                <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
+                <span class="oi" data-glyph="eye" title="{{ _('View') }}" aria-hidden="true"></span>
                 <span class="u-hide-on-medium"> all</span>
             </a>
             <a href="{{ url_for('causes.cause_add_edit') }}"
-               title="Add new cause"
+		title="{{ _('Add new cause') }}"
                class="button u-pull-right">
-                <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
-                <span class="u-hide-on-medium"> cause</span>
+                <span class="oi" data-glyph="plus" title="{{ _('Add') }}" aria-hidden="true"></span>
+                <span class="u-hide-on-medium"> {{ _('cause') }}</span>
             </a>
             <table class="u-full-width">
                 <thead>
                     <tr>
-                        <th class="u-show-on-large">id</th>
-                        <th>title (slug)</th>
-                        <th class="u-text-right">edit</th>
+                        <th class="u-show-on-large">{{ _('id') }}</th>
+                        <th>{{ _('title (slug)') }}</th>
+                        <th class="u-text-right">{{ _('edit') }}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -120,7 +123,7 @@
 			</td>
                         <td class="u-text-right">
                           <a href="{{ url_for('causes.cause_add_edit', slug=cause.slug) }}">
-                              <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
+                              <span class="oi" data-glyph="pencil" title="{{ _('Edit') }}" aria-hidden="true"></span>
                           </a>
                         </td>
                     </tr>
@@ -133,13 +136,19 @@
                             <span class="oi"
                                   data-glyph="ellipses"
                                   style="display:block; margin-bottom:-8px;"
-                                  title="More"
+                                  title="{{ _('More') }}"
                                   aria-hidden="true"></span>
                         </td>
                         <td colspan="3" class="u-text-right">
                             <small>
-                                {{ users | length -causes_display_cap }} additional entries not displayed.
-                                <a href="{{ url_for('.admin_cause_list') }}">View all</a>.
+				{% trans trimmed cause_count = causes | length - causes_display_cap %}
+				{{ cause_count }} additional entry not displayed.
+				{% pluralize %}
+				{{ cause_count }} additional entries not displayed.
+				{% endtrans %}
+				<a href="{{ url_for('.admin_cause_list') }}">
+				    {{ _('View all') }}
+				</a>.
                             </small>
                         </td>
                     </tr>
@@ -149,8 +158,10 @@
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
                             <small>
-                                Nothing here yet.
-                                <a href="{{ url_for('causes.cause_add_edit') }}"> Add a new cause</a>.
+                                {{ _('Nothing here yet') }}.
+				<a href="{{ url_for('causes.cause_add_edit') }}"> 
+				    {{ _('Add a new cause') }}
+				</a>.
                             </small>
                         </td>
                     </tr>
@@ -166,23 +177,23 @@
 		<sup><small>{{ pages | length }}</small></sup>
 	    </h3>
             <a href="{{ url_for('.admin_page_list') }}"
-               title="View all pages"
+               title="{{ _('View all pages') }}"
                class="button u-pull-right u-add-margin-left">
                 <span class="oi" data-glyph="eye" title="View" aria-hidden="true"></span>
-                <span class="u-hide-on-medium"> all</span>
+                <span class="u-hide-on-medium"> {{ _('all') }}</span>
             </a>
             <a href="{{ url_for('.admin_page_add') }}"
                title="Add new page"
                class="button u-pull-right">
                 <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
-                <span class="u-hide-on-medium"> page</span>
+                <span class="u-hide-on-medium"> {{ _('page') }}</span>
             </a>
             <table class="u-full-width">
                 <thead>
                     <tr>
-                        <th class="u-show-on-large">id</th>
-                        <th>name (url)</th>
-                        <th class="u-text-right">edit</th>
+                        <th class="u-show-on-large">{{ _('id') }}</th>
+                        <th>{{ _('name (url)') }}</th>
+                        <th class="u-text-right">{{ _('edit') }}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -197,7 +208,9 @@
 		        </td>
                         <td class="u-text-right">
                             <a href="{{ url_for('.admin_page_edit', pk=page.id) }}">
-                                <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
+                                <span class="oi" data-glyph="pencil"
+				    title="{{ _('Edit') }}" 
+				    aria-hidden="true"></span>
                             </a>
                         </td>
                     </tr>
@@ -210,13 +223,17 @@
                             <span class="oi"
                                   data-glyph="ellipses"
                                   style="display:block; margin-bottom:-8px;"
-                                  title="More"
+                                  title="{{ _('More') }}"
                                   aria-hidden="true"></span>
                         </td>
                         <td colspan="3" class="u-text-right">
                             <small>
-                                {{ users | length -pages_display_cap }} additional entries not displayed.
-                                <a href="{{ url_for('.admin_page_list') }}"> View all</a>.
+				{% trans trimmed page_count = pages | length - pages_display_cap %}
+				{{ page_count }} additional entry not displayed.
+				{% pluralize %}
+				{{ page_count }} additional entries not displayed.
+				{% endtrans %}
+                                <a href="{{ url_for('.admin_page_list') }}"> {{ _('View all') }}</a>.
                             </small>
                         </td>
                     </tr>
@@ -226,8 +243,10 @@
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
                             <small>
-                                Nothing here yet.
-                                <a href="{{ url_for('.admin_page_add') }}"> Add a new page</a>.
+                                {{ _('Nothing here yet') }}.
+				<a href="{{ url_for('.admin_page_add') }}"> 
+				    {{ _('Add a new page') }}
+				</a>.
                             </small>
                         </td>
                     </tr>
