--- a/app/templates/admin/page_edit.html
+++ b/app/templates/admin/page_edit.html
@@ -1,12 +1,12 @@
 {% extends "base_form.html" %}
 
-{% block title %}Edit page - {{ super() }}{% endblock title %}
+{% block title %}{{ _('Edit page') }} - {{ super() }}{% endblock title %}
 
 {% block content %}
     {% from "helpers/forms.html" import render_field, render_boolean %}
     <div class="row u-add-margin-top">
       <div class="six columns offset-by-three">
-        <h2>Edit page</h2>
+        <h2>{{ _('Edit page') }}</h2>
       </div>
     </div>
     <form id="page" name="page" action="" method="post">
@@ -28,7 +28,7 @@
         <div class="row">
             <fieldset>
                 <div class="three columns offset-by-three">
-                    <input id="save" type="submit" value="Save"
+                    <input id="save" type="submit" value="{{ _('Save') }}"
                         class="button button-primary u-mobile-fixed-bottom">
                 </div>
                 <div class="three columns">
