--- a/app/templates/admin/page_list.html
+++ b/app/templates/admin/page_list.html
@@ -1,24 +1,24 @@
 {% extends "base.html" %}
 
-{% block title %}Pages - {{ super() }}{% endblock title %}
+{% block title %}{{ _('Pages') }} - {{ super() }}{% endblock title %}
 
 {% block content %}
 <div class="full-width-container">
     <div class="row u-add-margin-top">
         <div class="eight columns">
-            <h1>Pages <sup><small>{{ gapes | length }}</small></sup></h1>
+            <h1>{{ _('Pages') }} <sup><small>{{ pages | length }}</small></sup></h1>
         </div>
         <div class="four columns">
             <a href="{{ url_for('admin.admin') }}"
                class="button button-primary u-add-margin-top u-add-margin-left u-pull-right">
-                <span class="oi" data-glyph="caret-left" title="Back" aria-hidden="true"></span>
-                <span class="u-hide-on-mobile"> to Admin</span>
+               <span class="oi" data-glyph="caret-left" title="{{ _('Back') }}" aria-hidden="true"></span>
+               <span class="u-hide-on-mobile"> {{ _('to Admin') }}</span>
             </a>
             <a href="{{ url_for('.admin_page_add') }}"
-               title="Add new page"
+                title="{{ _('Add new page') }}"
                class="button u-pull-right u-add-margin-top">
-                <span class="oi" data-glyph="plus" title="Add" aria-hidden="true"></span>
-                <span class="u-hide-on-mobile"> page</span>
+               <span class="oi" data-glyph="plus" title="{{ _('Add') }}" aria-hidden="true"></span>
+               <span class="u-hide-on-mobile"> {{ _('page') }}</span>
             </a>
         </div>
     </div>
@@ -28,10 +28,10 @@
             <table class="u-full-width">
                 <thead>
                     <tr>
-                        <th>id</th>
-                        <th>name</th>
-                        <th>url</th>
-                        <th class="u-text-right">edit</th>
+                        <th>{{ _('id') }}</th>
+                        <th>{{ _('name') }}</th>
+                        <th>{{ _('url') }}</th>
+                        <th class="u-text-right">{{ _('edit') }}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -46,7 +46,8 @@
                         <td>{{ page.url }}</td>
                         <td class="u-text-right">
                             <a href="{{ url_for('.admin_page_edit', pk=page.id) }}">
-                                <span class="oi" data-glyph="pencil" title="Edit" aria-hidden="true"></span>
+                                <span class="oi" data-glyph="pencil"
+                                    title="{{ _('Edit') }}" aria-hidden="true"></span>
                             </a>
                         </td>
                     </tr>
@@ -57,8 +58,10 @@
                     <tr class="u-remove-border-bottom">
                         <td colspan="4" class="u-text-right">
                             <small>
-                                Nothing here yet.
-                                <a href="{{ url_for('.admin_page_add') }}"> Add a new page</a>.
+                                {{ _('Nothing here yet.') }}
+                                <a href="{{ url_for('.admin_page_add') }}"> 
+                                    {{ _('Add a new page') }}
+                                </a>.
                             </small>
                         </td>
                     </tr>
