--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -144,7 +144,8 @@
         {% if current_user in cause.creators.all() or current_user.is_admin %}
         <div class="four columns">
             <a class="button u-pull-right" href="{{ url_for('.action_add_edit', slug=cause.slug) }}">
-                <span class="oi" data-glyph="plus" title="Add new action" aria-hidden="true"></span>
+                <span class="oi" data-glyph="plus" aria-hidden="true"
+                    title="{{ _('Add new action') }}"></span>
                 <span>&nbsp;{{ _('new action') }}</span>
             </a>
         </div>
