Add page title to 500 template

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% block scripts %}
+{% block title %}
+    {{ _('Internal Server Error') }} - {{ super() }}
 {% endblock %}
 
 {% block content %}
