Don't try to display story_heading if un-set

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -271,7 +271,9 @@
         </div>
 
         <div class="three columns">
+            {% if cause.story_heading %}
             <h3>{{ cause.story_heading }}</h3>
+            {% endif %}
             <article class="read_more">
                 {{ cause.story_content|markdown }}
             </article>
