Show current year in copyright notice

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -222,7 +222,7 @@
             <hr>
             <div class="row">
                 <div class="twelve columns u-text-center">
-                    <small>&copy; 2016 {{ site_name }} authors</small> |
+                    <small>&copy; 2016-{{ now.year }} {{ site_name }} authors</small> |
                     <a href="/terms_of_service"><small>
                         {{ _('Terms of service') }}
                     </small></a>
