--- a/app/templates/causes/action_form.html
+++ b/app/templates/causes/action_form.html
@@ -55,7 +55,7 @@
                         class="button button-primary u-mobile-fixed-bottom">
                 </div>
                 <div class="three columns">
-                    {% if current_user in cause.creators.all() or current_user.is_admin %}
+                    {% if action.id and (current_user in cause.creators.all() or current_user.is_admin) %}
                     <a href="{{ url_for('causes.action_delete', slug=cause.slug, pk=action.id) }}" class="button danger u-full-width">Delete</a>
                     {% endif %}
                 </div>
