Fixed bug where view conversation link on comments was not working

--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -58,7 +58,7 @@ section (app/templates/styleguide/templating#cause-helpers)
         {% elif event.event_type_id == 8 and event.item and not event.item.deleted %}
             {{ render_post(event.item.cause, event.item) }}
         {% elif event.event_type_id == 9 and event.item and not event.item.deleted %}
-            {{ render_post_comment(event.item.cause, event.item) }}
+            {{ render_post_comment(event.item.post.cause, event.item) }}
         {% endif %}
     </div>
 {% endfor %}
